--- a/pg3.html
+++ b/pg3.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <img src="https://i.ibb.co/4w67GpMJ/brown-labubu-illustration-free-vector-removebg-preview.png" alt="Labubu">
-        <h1>Lojas Labubu</h1>
+        <h1>Sobre Labubu</h1>
     </header>
     <nav>
         <ul>
@@ -47,7 +47,7 @@
     }
 
     header img {
-        height: 150px;
+        height: 100px;
         margin-right: 15px;
     }
 
