--- a/pg4.html
+++ b/pg4.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Loja Labubu - Carrinho</title>
+    <title>Labubu Loja</title>
 </head>
 
 <body>
     <header>
         <img src="https://i.ibb.co/4w67GpMJ/brown-labubu-illustration-free-vector-removebg-preview.png" alt="Labubu">
-        <h1>Loja Labubu</h1>
+        <h1>Lojas Labubu</h1>
     </header>
 
     <nav>
