--- a/pg1.html
+++ b/pg1.html
@@ -11,6 +11,9 @@
     <header>
         <img src="https://i.ibb.co/4w67GpMJ/brown-labubu-illustration-free-vector-removebg-preview.png" alt="Labubu">
         <h1>Lojas Labubu</h1>
+        <a class="loginig"  href="pg6.html">
+            <img src="https://i.ibb.co/xtrcmGGr/1361728.png" alt="Imagem de login">
+        </a>
     </header>
     <nav>
         <ul>
@@ -128,5 +131,13 @@
     .produto h3 {
         margin: 10px 0 5px;
         color: #5c3d1c;
+    }
+
+    .loginig {
+        margin-left: 70%;
+    }
+    .loginig img{
+        width: 100px;
+        height: 100px;
     }
 </style>
