--- a/pg4.html
+++ b/pg4.html
@@ -11,6 +11,9 @@
     <header>
         <img src="https://i.ibb.co/4w67GpMJ/brown-labubu-illustration-free-vector-removebg-preview.png" alt="Labubu">
         <h1>Lojas Labubu</h1>
+        <a class="loginig"  href="pg6.html">
+            <img src="https://i.ibb.co/xtrcmGGr/1361728.png" alt="Imagem de login">
+        </a>
     </header>
 
     <nav>
@@ -147,6 +150,13 @@
 
     #finalizar:hover {
         background-color: rgb(92, 61, 28);
+    }
+    .loginig {
+        margin-left: 70%;
+    }
+    .loginig img{
+        width: 100px;
+        height: 100px;
     }
 </style>
 <script>
