--- a/pg5.html
+++ b/pg5.html
@@ -11,6 +11,9 @@
     <header>
         <img src="https://i.ibb.co/4w67GpMJ/brown-labubu-illustration-free-vector-removebg-preview.png" alt="Labubu">
         <h1>Favoritos Labubu</h1>
+        <a class="loginig"  href="pg6.html">
+            <img src="https://i.ibb.co/xtrcmGGr/1361728.png" alt="Imagem de login">
+        </a>
     </header>
 
     <nav>
@@ -127,5 +130,12 @@
     .produto h3 {
         margin: 10px 0 5px;
         color: rgb(92, 61, 28);
+    }
+    .loginig {
+        margin-left: 70%;
+    }
+    .loginig img {
+        width: 100px;
+        height: 100px;
     }
 </style>
