--- a/pg6.html
+++ b/pg6.html
@@ -52,7 +52,7 @@
         .login {
             max-width: 400px;
             margin: 50px auto;
-            background-color: #fff;
+            background-color: rgb(255, 255, 255);
             border-radius: 10px;
             padding: 30px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -67,7 +67,7 @@
         .login label {
             display: block;
             margin-bottom: 5px;
-            color: #5c3d1c;
+            color: rgb(92, 61, 28);
             font-weight: bold;
         }
 
@@ -75,7 +75,7 @@
             width: 100%;
             padding: 10px;
             margin-bottom: 15px;
-            border: 1px solid #ccc;
+            border: 1px solid rgb(204, 204, 204);
             border-radius: 5px;
         }
 
