--- a/pg7.html
+++ b/pg7.html
@@ -59,7 +59,7 @@
         .cadastro {
             max-width: 500px;
             margin: 50px auto;
-            background-color: #fff;
+            background-color: rgb(255, 255, 255);
             border-radius: 10px;
             padding: 30px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -104,7 +104,7 @@
         .cadastro p {
             text-align: center;
             margin-top: 15px;
-            color: #5c3d1c;
+            color: rgb(92, 61, 28);
         }
 
         .cadastro a {
